--- a/src/app/components/FileTree.scss
+++ b/src/app/components/FileTree.scss
@@ -1,3 +1,20 @@
 .file-list {
     border-right: 1px solid #cacaca;
 }
+
+.file-preview {
+        img {
+            max-width: 100%;
+        }
+
+        audio,
+        video {
+            width: 100%;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    }
