- Highlight upload zone when dragging over it - Move upload code into separate hook

--- a/src/app/components/FileTree.scss
+++ b/src/app/components/FileTree.scss
@@ -1,6 +1,10 @@
 .uploader-dropzone > div {
     height: 100%;
     outline: none;
+
+    &.dragging {
+        background-color: #7fffd4;
+    }
 }
 
 .file-list {
